Code cleanup in MainViewController